--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,12 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
+  username: postgres
 
 development:
   <<: *default
-  database: demo_rails5_development
+  database: demo-rails5_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: demo_rails5_test
+  database: demo-rails5_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: demo_rails5_production
-  username: demo_rails5
+  database: demo-rails5_production
+  username: demo-rails5
   password: <%= ENV['DEMO_RAILS5_DATABASE_PASSWORD'] %>
