--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -102,3 +102,7 @@ blocks:
       - name: RSpec - feature specs
         commands:
           - bundle exec rspec spec/features
+
+  promotions:
+    - name: Deploy to Heroku
+      pipeline_file: heroku.yml
